# prediction-whale-db

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: unit-test-runner.md
.claude/skills/finalize/: SKILL.md
.claude/skills/handoff/: SKILL.md
.claude/skills/plan/: SKILL.md
.claude/skills/pre-commit-dev/: SKILL.md
.claude/skills/tdd/: SKILL.md
docs/instructions/: testing-standards.md  workflow.md
docs/plans/: initial-plan.md
src/prediction_whale_db/: __init__.py  cli.py
tests/: test_cli.py
