[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "prediction-whale-db"
version = "0.1.0"
description = "Prediction-market integrity pipeline research workspace"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
prediction-whale-db = "prediction_whale_db.cli:main"

[dependency-groups]
dev = [
	"pytest>=8.3.0",
	"ruff>=0.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/prediction_whale_db"]
